--- a/11_buttons-that-do-stuff/01_counter/index.html
+++ b/11_buttons-that-do-stuff/01_counter/index.html
@@ -5,8 +5,8 @@
     <meta charset="UTF-8">
     <link rel="stylesheet" href="https://use.typekit.net/buv6ook.css">
     <!-- If you have inherited this code, go to fonts.adobe.com and make a webfont for the entirety of Degular by OhNo (https://fonts.adobe.com/fonts/degular) -->
-    <link rel="stylesheet" href="/style.css"">
-    <script src="/01_counter/script.js" type="module"></script>
+    <link rel="stylesheet" href="/11_buttons-that-do-stuff/style.css">
+    <script src="/11_buttons-that-do-stuff/01_counter/script.js" type="module"></script>
     <title>Selecting HTML</title>
 </head>
 
