--- a/11_buttons-that-do-stuff/03_stringer/index.html
+++ b/11_buttons-that-do-stuff/03_stringer/index.html
@@ -28,7 +28,7 @@
           </header>
 
           <section id="stringer-body" class="widget-body">
-            <p id="stringer-output-paragraph">S</p>
+            <p id="stringer-output-paragraph"></p>
             <section id="stringer-input">
               <div class="stringer-input-letter">
                 <label for="stringer-text"
