--- a/31_proper-care-of-objects/01_customCursor/index.html
+++ b/31_proper-care-of-objects/01_customCursor/index.html
@@ -1,18 +1,21 @@
 <!DOCTYPE html>
 <html lang="en">
-
-<head>
-    <meta charset="UTF-8">
-    <link rel="stylesheet" href="https://use.typekit.net/buv6ook.css">
+  <head>
+    <meta charset="UTF-8" />
+    <link rel="stylesheet" href="https://use.typekit.net/buv6ook.css" />
     <!-- If you have inherited this code, go to fonts.adobe.com and make a webfont for the entirety of Degular by OhNo (https://fonts.adobe.com/fonts/degular) -->
-    <link rel="stylesheet" href="/31_proper-care-of-objects/style.css">
-    <script src="/31_proper-care-of-objects/01_customCursor/script.js" type="module"></script>
-    <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
-    <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="/31_proper-care-of-objects/style.css" />
+    <script
+      src="/31_proper-care-of-objects/01_customCursor/script.js"
+      type="module"
+    ></script>
+    <meta
+      name="viewport"
+      content="width=device-width, initial-scale=1, shrink-to-fit=no"
+    />
+    <link rel="stylesheet" href="style.css" />
     <title>Custom Cursor</title>
-</head>
+  </head>
 
-<body style="height: 100vh; width: 100vw;">
-</body>
-
+  <body style="height: 100vh; width: 100vw"></body>
 </html>
