--- a/collection/index.html
+++ b/collection/index.html
@@ -4,8 +4,8 @@
     <meta charset="UTF-8" />
     <link rel="stylesheet" href="https://use.typekit.net/buv6ook.css" />
     <!-- If you have inherited this code, go to fonts.adobe.com and make a webfont for the entirety of Degular by OhNo (https://fonts.adobe.com/fonts/degular) -->
-    <link rel="stylesheet" href="/collection/counter/style.css" />
-    <script src="/collection/counter/script.js" type="module"></script>
+    <link rel="stylesheet" href="/collection/style.css" />
+    <script src="/collection/script.js" type="module"></script>
     <title>Selecting HTML</title>
   </head>
 
