--- a/collection/index.html
+++ b/collection/index.html
@@ -17,7 +17,7 @@
     </header>
 
     <main>
-      <!-- Counter -->
+      <!--Counter-->
       <article id="counter" class="widget-container">
         <section class="green widget shadow-medium rounded">
           <header class="widget-header">
@@ -41,6 +41,29 @@
                 –
               </button>
             </section>
+          </section>
+        </section>
+      </article>
+      <!--Juggler-->
+      <article id="juggler" class="widget-container">
+        <section class="blue widget shadow-medium rounded">
+          <header class="widget-header">
+            <h3 class="widget-title">juggler</h3>
+          </header>
+
+          <section id="juggler-body" class="widget-body">
+            <button
+              class="juggler-body-button rounded shadow-small"
+              id="juggler-body-button-first"
+            >
+              First
+            </button>
+            <button
+              class="juggler-body-button rounded shadow-small"
+              id="juggler-body-button-second"
+            >
+              Second
+            </button>
           </section>
         </section>
       </article>
