--- a/collection/index.html
+++ b/collection/index.html
@@ -67,6 +67,46 @@
           </section>
         </section>
       </article>
+      <!--stringer-->
+      <article id="stringer" class="widget-container">
+        <section class="yellow widget shadow-medium rounded">
+          <header class="widget-header">
+            <h3 class="widget-title">Stringer</h3>
+          </header>
+
+          <section id="stringer-body" class="widget-body">
+            <p id="stringer-output-paragraph"></p>
+            <section id="stringer-input">
+              <div class="stringer-input-letter">
+                <label for="stringer-text"
+                  >Single character input field?!</label
+                >
+                <input
+                  type="text"
+                  name="stringer-text"
+                  id="stringer-input-character"
+                  maxlength="1"
+                  class="stringer-input-text"
+                />
+              </div>
+              <div id="stringer-input-buttons">
+                <button
+                  class="stringer-body-button rounded shadow-small"
+                  id="stringer-input-button-add"
+                >
+                  Add
+                </button>
+                <button
+                  class="stringer-body-button"
+                  id="stringer-input-button-clear"
+                >
+                  Clear
+                </button>
+              </div>
+            </section>
+          </section>
+        </section>
+      </article>
     </main>
   </body>
 </html>
